--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,10 @@ dist.jar=${dist.dir}/student-system-demo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.byte-buddy-1.6.5.jar=/home/kana/Downloads/byte-buddy-1.6.5.jar
+file.reference.byte-buddy-agent-1.6.5.jar=/home/kana/Downloads/byte-buddy-agent-1.6.5.jar
+file.reference.mockito-core-2.7.1.jar=/home/kana/Downloads/mockito-core-2.7.1.jar
+file.reference.objenesis-2.5.jar=/home/kana/Downloads/objenesis-2.5/objenesis-2.5.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -42,7 +46,13 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.mockito-core-2.7.1.jar}:\
+    ${file.reference.byte-buddy-1.6.5.jar}:\
+    ${file.reference.byte-buddy-agent-1.6.5.jar}:\
+    ${file.reference.objenesis-2.5.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -52,6 +62,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mockito-core-2.7.1.jar=/home/kana/Downloads/mockito-core-2.7.1-javadoc.jar
+javadoc.reference.objenesis-2.5.jar=/home/kana/Downloads/objenesis-2.5/objenesis-2.5-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -72,5 +84,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.mockito-core-2.7.1.jar=/home/kana/Downloads/mockito-core-2.7.1-sources.jar
+source.reference.objenesis-2.5.jar=/home/kana/Downloads/objenesis-2.5/objenesis-2.5-sources.jar
 src.dir=src
 test.src.dir=test
