--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,6 +5,7 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=student-system-demo
 application.vendor=kana
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,12 +30,14 @@ dist.jar=${dist.dir}/student-system-demo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.byte-buddy-1.6.5.jar=/home/kana/Downloads/byte-buddy-1.6.5.jar
-file.reference.byte-buddy-agent-1.6.5.jar=/home/kana/Downloads/byte-buddy-agent-1.6.5.jar
-file.reference.mockito-core-2.7.1.jar=/home/kana/Downloads/mockito-core-2.7.1.jar
-file.reference.objenesis-2.5.jar=/home/kana/Downloads/objenesis-2.5/objenesis-2.5.jar
+file.reference.byte-buddy-1.6.5.jar=lib/byte-buddy/byte-buddy-1.6.5.jar
+file.reference.byte-buddy-agent-1.6.5.jar=lib/byte-buddy/byte-buddy-agent-1.6.5.jar
+file.reference.mockito-core-2.7.1.jar=lib/mockito-core/mockito-core-2.7.1.jar
+file.reference.objenesis-2.5.jar=lib/objenesis/objenesis-2.5.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -62,13 +65,32 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.mockito-core-2.7.1.jar=/home/kana/Downloads/mockito-core-2.7.1-javadoc.jar
-javadoc.reference.objenesis-2.5.jar=/home/kana/Downloads/objenesis-2.5/objenesis-2.5-javadoc.jar
+javadoc.reference.byte-buddy-1.6.5.jar=lib/byte-buddy/byte-buddy-1.6.5-javadoc.jar
+javadoc.reference.byte-buddy-agent-1.6.5.jar=lib/byte-buddy/byte-buddy-agent-1.6.5-javadoc.jar
+javadoc.reference.mockito-core-2.7.1.jar=lib/mockito-core/mockito-core-2.7.1-javadoc.jar
+javadoc.reference.objenesis-2.5.jar=lib/objenesis/objenesis-2.5-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=ph.kana.testdemo.Application
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -84,7 +106,9 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.mockito-core-2.7.1.jar=/home/kana/Downloads/mockito-core-2.7.1-sources.jar
-source.reference.objenesis-2.5.jar=/home/kana/Downloads/objenesis-2.5/objenesis-2.5-sources.jar
+source.reference.byte-buddy-1.6.5.jar=lib/byte-buddy/byte-buddy-1.6.5-sources.jar
+source.reference.byte-buddy-agent-1.6.5.jar=lib/byte-buddy/byte-buddy-agent-1.6.5-sources.jar
+source.reference.mockito-core-2.7.1.jar=lib/mockito-core/mockito-core-2.7.1-sources.jar
+source.reference.objenesis-2.5.jar=lib/objenesis/objenesis-2.5-sources.jar
 src.dir=src
 test.src.dir=test
